--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           apiToken: ${{ secrets.BUGBUG_API_TOKEN }}
           suiteId: fd0de8e7-4e32-4c5a-b776-a011b545dbc9
-          outputPath: /home/runner/work/BugBugTestRun/BugBugTestRun/test-results.xml
+          outputPath: test-results.xml
 
       - name: Getting Run Output
         run: |
