--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,17 @@ jobs:
         with:
           path: all-test-results
 
+      - name: Extract Test Results
+        run: |
+          mkdir -p extracted-results
+          for file in all-test-results/*/*.zip; do
+            unzip -o "$file" -d extracted-results
+          done
+
       - name: Merge Test Results
         run: |
           pip install junitparser
-          junitparser merge all-test-results/*.xml merged-results.xml
+          junitparser merge extracted-results/*.xml merged-results.xml
 
       - name: Display Test Summary
         run: |
