--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,13 @@ jobs:
           mkdir -p merged-results
           junitparser merge $(find all-test-results -name "*.xml") merged-results/merged-results.xml
 
+      - name: Upload Merged Test Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: merged-test-results
+          path: merged-results/merged-results.xml
+          retention-days: 30
+
       - name: Display Merged Test Summary
         run: |
           echo "### 📝 Merged Test Summary" >> $GITHUB_STEP_SUMMARY
