--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,22 +50,38 @@ jobs:
         run: |
           echo "### 📝 Merged Test Summary" >> $GITHUB_STEP_SUMMARY
       
-          # Extract total tests, failures, and errors from merged-results.xml
-          TOTAL_TESTS=$(grep -oP '(?<=tests=")[0-9]+' merged-results/merged-results.xml | awk '{s+=$1} END {print s}')
-          FAILED_TESTS=$(grep -oP '(?<=failures=")[0-9]+' merged-results/merged-results.xml | awk '{s+=$1} END {print s}')
-          ERRORS=$(grep -oP '(?<=errors=")[0-9]+' merged-results/merged-results.xml | awk '{s+=$1} END {print s}')
+          # Extract total test details from ONLY <testsuites>
+          TOTAL_TESTS=$(grep -oP '<testsuites[^>]+tests="\K[0-9]+' merged-results/merged-results.xml | awk '{s+=$1} END {print s}')
+          FAILED_TESTS=$(grep -oP '<testsuites[^>]+failures="\K[0-9]+' merged-results/merged-results.xml | awk '{s+=$1} END {print s}')
+          ERRORS=$(grep -oP '<testsuites[^>]+errors="\K[0-9]+' merged-results/merged-results.xml | awk '{s+=$1} END {print s}')
+          SKIPPED_TESTS=$(grep -oP '<testsuites[^>]+skipped="\K[0-9]+' merged-results/merged-results.xml | awk '{s+=$1} END {print s}')
       
-          # Display summary in Markdown format
-          echo "| Metric  | Count |" >> $GITHUB_STEP_SUMMARY
-          echo "|---------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| ✅ Total Tests | $TOTAL_TESTS |" >> $GITHUB_STEP_SUMMARY
+          # Display overall summary
+          echo "| Metric        | Count |" >> $GITHUB_STEP_SUMMARY
+          echo "|--------------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| ✅ Total Tests  | $TOTAL_TESTS |" >> $GITHUB_STEP_SUMMARY
           echo "| ❌ Failed Tests | $FAILED_TESTS |" >> $GITHUB_STEP_SUMMARY
-          echo "| ⚠️ Errors | $ERRORS |" >> $GITHUB_STEP_SUMMARY
+          echo "| ⚠️ Errors       | $ERRORS |" >> $GITHUB_STEP_SUMMARY
+          echo "| ⏭️ Skipped      | $SKIPPED_TESTS |" >> $GITHUB_STEP_SUMMARY
       
-          # Highlight if failures exist
+          # Extract and list individual test cases with execution time
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 🏆 Individual Test Cases" >> $GITHUB_STEP_SUMMARY
+          echo "| Test Case | Execution Time (ms) |" >> $GITHUB_STEP_SUMMARY
+          echo "|-----------|--------------------|" >> $GITHUB_STEP_SUMMARY
+      
+          grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' merged-results/merged-results.xml | while read -r line; do
+            TEST_NAME=$(echo "$line" | grep -oP '(?<=name=")[^"]+')
+            EXECUTION_TIME=$(echo "$line" | grep -oP '(?<=time=")[^"]+')
+            echo "| $TEST_NAME | $EXECUTION_TIME |" >> $GITHUB_STEP_SUMMARY
+          done
+      
+          # Highlight test results
           if [ "$FAILED_TESTS" -gt 0 ] || [ "$ERRORS" -gt 0 ]; then
+            echo "" >> $GITHUB_STEP_SUMMARY
             echo "⚠️ **Some tests failed!**" >> $GITHUB_STEP_SUMMARY
           else
+            echo "" >> $GITHUB_STEP_SUMMARY
             echo "🎉 **All tests passed!**" >> $GITHUB_STEP_SUMMARY
           fi
 
