--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -115,3 +115,18 @@ jobs:
           name: merged-junit-test-report
           path: merged-results/merged-test-results.xml
           retention-days: 30
+
+      - name: Install junit2html
+        run: pip install junit2html
+
+      - name: Convert JUnit XML to HTML
+        run: |
+          mkdir -p test-reports
+          junit2html all-test-results/merged-test-results.xml test-reports/report.html
+      
+      - name: Upload HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: JUnit-HTML-Report
+          path: test-reports/report.html
+          retention-days: 30
