--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -116,17 +116,16 @@ jobs:
           path: merged-results/merged-test-results.xml
           retention-days: 30
 
-      - name: Install junit2html
-        run: pip install junit2html
-
-      - name: Convert JUnit XML to HTML
-        run: |
-          mkdir -p test-reports
-          junit2html merged-results/merged-test-results.xml test-reports/report.html
+      - name: Install Allure
+        run: curl -o allure.zip -Ls "https://github.com/allure-framework/allure2/releases/latest/download/allure-commandline.zip" && unzip allure.zip -d allure
       
-      - name: Upload HTML Report
+      - name: Generate Allure HTML Report
+        run: |
+          ./allure/bin/allure generate all-test-results --clean -o test-reports
+      
+      - name: Upload Allure HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: JUnit-HTML-Report
-          path: test-reports/report.html
+          name: Allure-Test-Report
+          path: test-reports/
           retention-days: 30
