--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -117,7 +117,7 @@ jobs:
           retention-days: 30
 
       - name: Install Allure
-        run: curl -o allure.zip -Ls "https://github.com/allure-framework/allure2/releases/latest/download/allure-commandline.zip" && unzip allure.zip -d allure
+        run: curl -o allure.zip -Ls "https://github.com/allure-framework/allure2/releases/download/2.33.0/allure-2.33.0.zip" && unzip allure.zip -d allure
       
       - name: Generate Allure HTML Report
         run: |
