--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -121,7 +121,7 @@ jobs:
         
       - name: Parse JUnit XML and Generate Chart
         run: |
-          python <<EOF
+          python - <<EOF
           import matplotlib.pyplot as plt
           import pandas as pd
           from junitparser import JUnitXml
