--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -121,18 +121,27 @@ jobs:
 
       - name: Parse JUnit XML and Generate Chart
         run: |
-          python3 - << 'EOF'
+          python3 - <<EOF
+          import os
           import matplotlib.pyplot as plt
           import pandas as pd
           from junitparser import JUnitXml, Error, Failure, Skipped
-
+          
+          XML_PATH = "merged-results/merged-test-results.xml"
+          OUTPUT_CHART = "test_status_chart.png"
+          
+          # Ensure the XML file exists
+          if not os.path.exists(XML_PATH):
+              print(f"ERROR: JUnit XML file '{XML_PATH}' not found.")
+              exit(1)
+          
           # Load JUnit XML
-          xml = JUnitXml.fromfile("merged-results/merged-test-results.xml")
-
+          xml = JUnitXml.fromfile(XML_PATH)
+          
           # Initialize counters
           passed, failed, errors, skipped = 0, 0, 0, 0
           unique_test_cases = set()
-
+          
           # Process each test case
           for suite in xml:
               for case in suite:
@@ -146,29 +155,44 @@ jobs:
                           skipped += 1
                   else:
                       passed += 1  # No result means it passed
-
-          # Create DataFrame for visualization
+          
+          # Check if there are test results to plot
+          if passed + failed + errors + skipped == 0:
+              print("No test cases found. Skipping chart generation.")
+              exit(0)
+          
+          # Data for plotting
           statuses = ["Passed", "Failed", "Errors", "Skipped"]
           counts = [passed, failed, errors, skipped]
-
-          # Generate Pie Chart
-          plt.figure(figsize=(8, 6))
-          plt.pie(counts, labels=statuses, autopct='%1.1f%%', colors=['green', 'red', 'orange', 'gray'], startangle=140)
+          colors = ['green', 'red', 'orange', 'gray']
+          
+          # Generate Horizontal Bar Chart
+          plt.figure(figsize=(8, 5))
+          plt.barh(statuses, counts, color=colors)
+          plt.xlabel("Number of Tests")
+          plt.ylabel("Test Status")
           plt.title("Test Status Breakdown")
-
-          # List unique test cases below the chart
-          plt.figtext(0.5, -0.1, "Unique Test Cases:\n" + "\n".join(unique_test_cases), wrap=True, horizontalalignment='center', fontsize=10)
-
-          # Save chart
-          plt.savefig("test_status_chart.png", bbox_inches='tight')
-
-          print("Test Summary:")
+          plt.xticks(rotation=45)
+          
+          # Display values on bars
+          for index, value in enumerate(counts):
+              plt.text(value, index, str(value), va='center', fontsize=10, fontweight='bold')
+          
+          # Save chart with high resolution
+          plt.savefig(OUTPUT_CHART, dpi=300, bbox_inches='tight')
+          
+          # Print summary
+          print("\nTest Summary:")
           print(f"Passed: {passed}, Failed: {failed}, Errors: {errors}, Skipped: {skipped}")
+          
+          # Print unique test cases aligned to the left
           print("\nUnique Test Cases:")
-          for test in unique_test_cases:
-              print(test)
+          for test in sorted(unique_test_cases):  # Sort alphabetically for better readability
+              print(f" - {test.ljust(40)}")  # Align left by padding
+          
+          print(f"Test status chart saved as: {OUTPUT_CHART}")
           EOF
-
+      
       - name: Upload Test Status Chart
         uses: actions/upload-artifact@v4
         with:
