--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,17 +52,18 @@ jobs:
           echo "| ⚠️ Errors       | ${ERRORS} |" >> "$GITHUB_STEP_SUMMARY"
           echo "| ⏭️ Skipped      | ${SKIPPED_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
       
-          # Extract and list individual test cases with execution time
+          # Extract and list individual test cases with execution time (in minutes)
           echo "" >> "$GITHUB_STEP_SUMMARY"
           echo "### Test Cases" >> "$GITHUB_STEP_SUMMARY"
-          echo "| Test Case | Execution Time (s) |" >> "$GITHUB_STEP_SUMMARY"
-          echo "|-----------|---------------------|" >> "$GITHUB_STEP_SUMMARY"
+          echo "| Test Case | Execution Time (min) |" >> "$GITHUB_STEP_SUMMARY"
+          echo "|-----------|-----------------------|" >> "$GITHUB_STEP_SUMMARY"
       
           grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' "test-results-${{ github.run_id }}.xml" | while read -r line; do
             TEST_NAME=$(echo "$line" | grep -oP '(?<=classname=")[^"]+')
             EXECUTION_TIME=$(echo "$line" | grep -oP '(?<=time=")[^"]+')
+            EXECUTION_TIME_MIN=$(awk "BEGIN {printf \"%.3f\", $EXECUTION_TIME / 60}")
             ESCAPED_TEST_NAME=$(echo "$TEST_NAME" | sed 's/|/\\|/g')
-            echo "| \`$ESCAPED_TEST_NAME\` | $EXECUTION_TIME |" >> "$GITHUB_STEP_SUMMARY"
+            echo "| \`$ESCAPED_TEST_NAME\` | $EXECUTION_TIME_MIN |" >> "$GITHUB_STEP_SUMMARY"
           done
       
           # Highlight test results
