--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,40 +30,46 @@ jobs:
 
       - name: Display Test Summary
         run: |
-          echo "### 📝 Test Summary" >> $GITHUB_STEP_SUMMARY
+          echo "### 📝 Test Summary" >> "$GITHUB_STEP_SUMMARY"
       
-          # Extract total test details from ONLY <testsuites>
-          TOTAL_TESTS=$(grep -oP '<testsuites[^>]+tests="\K[0-9]+' test-results-${{ github.run_id }}.xml | awk '{s+=$1} END {print s}')
-          FAILED_TESTS=$(grep -oP '<testsuites[^>]+failures="\K[0-9]+' test-results-${{ github.run_id }}.xml | awk '{s+=$1} END {print s}')
-          ERRORS=$(grep -oP '<testsuites[^>]+errors="\K[0-9]+' test-results-${{ github.run_id }}.xml | awk '{s+=$1} END {print s}')
-          SKIPPED_TESTS=$(grep -oP '<testsuites[^>]+skipped="\K[0-9]+' test-results-${{ github.run_id }}.xml | awk '{s+=$1} END {print s}')
+          # Check if the test result file exists
+          if [ ! -f "test-results-${{ github.run_id }}.xml" ]; then
+            echo "❌ Test results file not found." >> "$GITHUB_STEP_SUMMARY"
+            exit 1
+          fi
+      
+          # Extract total test details from <testsuites>
+          TOTAL_TESTS=$(grep -oP '<testsuites[^>]+tests="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
+          FAILED_TESTS=$(grep -oP '<testsuites[^>]+failures="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
+          ERRORS=$(grep -oP '<testsuites[^>]+errors="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
+          SKIPPED_TESTS=$(grep -oP '<testsuites[^>]+skipped="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
       
           # Display overall summary
-          echo "| Metric        | Count |" >> $GITHUB_STEP_SUMMARY
-          echo "|--------------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| ✅ Total Tests  | $TOTAL_TESTS |" >> $GITHUB_STEP_SUMMARY
-          echo "| ❌ Failed Tests | $FAILED_TESTS |" >> $GITHUB_STEP_SUMMARY
-          echo "| ⚠️ Errors       | $ERRORS |" >> $GITHUB_STEP_SUMMARY
-          echo "| ⏭️ Skipped      | $SKIPPED_TESTS |" >> $GITHUB_STEP_SUMMARY
+          echo "| Metric        | Count |" >> "$GITHUB_STEP_SUMMARY"
+          echo "|--------------|-------|" >> "$GITHUB_STEP_SUMMARY"
+          echo "| ✅ Total Tests  | ${TOTAL_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| ❌ Failed Tests | ${FAILED_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| ⚠️ Errors       | ${ERRORS} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| ⏭️ Skipped      | ${SKIPPED_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
       
-          # Extract and list individual test cases with execution time
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Test Cases" >> $GITHUB_STEP_SUMMARY
-          echo "| Test Case | Execution Time (ms) |" >> $GITHUB_STEP_SUMMARY
-          echo "|-----------|--------------------|" >> $GITHUB_STEP_SUMMARY
+          # Extract and list individual test cases with execution time (in minutes)
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "### Test Cases" >> "$GITHUB_STEP_SUMMARY"
+          echo "| Test Case | Execution Time (ms) |" >> "$GITHUB_STEP_SUMMARY"
+          echo "|-----------|-----------------------|" >> "$GITHUB_STEP_SUMMARY"
       
-          grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' test-results-${{ github.run_id }}.xml | while read -r line; do
+          grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' "test-results-${{ github.run_id }}.xml" | while read -r line; do
             TEST_NAME=$(echo "$line" | grep -oP '(?<=classname=")[^"]+')
             EXECUTION_TIME=$(echo "$line" | grep -oP '(?<=time=")[^"]+')
+            EXECUTION_TIME_SEC=$(awk "BEGIN {printf \"%.3f\", $EXECUTION_TIME / 10000}")
             ESCAPED_TEST_NAME=$(echo "$TEST_NAME" | sed 's/|/\\|/g')
-            echo "| \`$ESCAPED_TEST_NAME\` | $EXECUTION_TIME |" >> "$GITHUB_STEP_SUMMARY"
-            done
+            echo "| \`$ESCAPED_TEST_NAME\` | $EXECUTION_TIME_SEC |" >> "$GITHUB_STEP_SUMMARY"
+          done
       
           # Highlight test results
+          echo "" >> "$GITHUB_STEP_SUMMARY"
           if [ "$FAILED_TESTS" -gt 0 ] || [ "$ERRORS" -gt 0 ]; then
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "⚠️ **Some tests failed!**" >> $GITHUB_STEP_SUMMARY
+            echo "⚠️ **Some tests failed!**" >> "$GITHUB_STEP_SUMMARY"
           else
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "🎉 **All tests passed!**" >> $GITHUB_STEP_SUMMARY
+            echo "🎉 **All tests passed!**" >> "$GITHUB_STEP_SUMMARY"
           fi
