--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,8 @@ jobs:
           # Extract and list individual test cases with execution time (in minutes)
           echo "" >> "$GITHUB_STEP_SUMMARY"
           echo "### Test Cases" >> "$GITHUB_STEP_SUMMARY"
-          echo "| Test Case | Execution Time (ms) |" >> "$GITHUB_STEP_SUMMARY"
-          echo "|-----------|-----------------------|" >> "$GITHUB_STEP_SUMMARY"
+          echo "| Test Case | Execution Time (seconds) |" >> "$GITHUB_STEP_SUMMARY"
+          echo "|-----------|--------------------------|" >> "$GITHUB_STEP_SUMMARY"
       
           grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' "test-results-${{ github.run_id }}.xml" | while read -r line; do
             TEST_NAME=$(echo "$line" | grep -oP '(?<=classname=")[^"]+')
