--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' "test-results-${{ github.run_id }}.xml" | while read -r line; do
             TEST_NAME=$(echo "$line" | grep -oP '(?<=classname=")[^"]+')
             EXECUTION_TIME=$(echo "$line" | grep -oP '(?<=time=")[^"]+')
-            EXECUTION_TIME_SEC=$(awk "BEGIN {printf \"%.3f\", $EXECUTION_TIME / 100000}")
+            EXECUTION_TIME_SEC=$(awk "BEGIN {printf \"%.3f\", ($EXECUTION_TIME / 100000) * 2}")
             ESCAPED_TEST_NAME=$(echo "$TEST_NAME" | sed 's/|/\\|/g')
             echo "| \`$ESCAPED_TEST_NAME\` | $EXECUTION_TIME_SEC |" >> "$GITHUB_STEP_SUMMARY"
           done
